[gd_scene load_steps=4 format=3 uid="uid://djfqe5ao7kjoj"]

[ext_resource type="Script" uid="uid://2vmcwetaf4er" path="res://audio/AudioTask.gd" id="1_rx4a7"]

[sub_resource type="Theme" id="Theme_rx4a7"]
default_font_size = 48

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_rx4a7"]

[node name="AudioTask" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_rx4a7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Audio Task"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="VBoxContainer/Title"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.2
anchor_bottom = 0.5
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "Back"

[node name="ExternalFileDisabled" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "Downloading external files is disabled, task cannot be initialized.
Enable downloading external files on the main menu to continue."
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
scroll_following = true

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 6

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_rx4a7")
theme_override_constants/separation = 32
alignment = 1

[node name="LoadAudio" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
disabled = true
text = "Load Audio"

[node name="Record" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
disabled = true
text = "Start Recording"

[node name="AudioFileDialog" type="FileDialog" parent="."]
title = "Open a File"
file_mode = 0
access = 2
filters = PackedStringArray("*.wav,*.mp3")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_rx4a7")
bus = &"Record"
